--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,7 @@ services:
     environment:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: postgres
+      POSTGRES_DB: hello_dev
       PGDATA: /var/lib/postgresql/data/pgdata
     restart: always
     volumes:
